<resources>

    <string name="app_name">HelloMAD</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">NUMAD-NehaTalnikar</string>

    <string name="team_members">Team Members</string>
    <string name="sudoku">Sudoku</string>
    <string name="error">Create Error</string>
    <string name="boggle">Boggle</string>
    <string name="persistentboggle">Persistent Boggle</string>
    <string name="quit">Quit</string>
    
    <string name="team_textmessage">Neha Talnikar talnikar.n@husky.neu.edu </string>
    
    <string name="boggle_title">Boggle!</string>
    <string name="playgame_label">Play Game</string>
    <string name="rules_label">Game Rules</string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="bogglequit_label">Quit</string>
    
    <string name="newgame_label">New Game</string>
    <string name="pause_label">Pause</string>
    <string name="resume_label">Resume</string>
    <string name="submit_label">Submit Word</string>
    
    <string name="progressbar_text">Loading dictionary. Please wait.</string>
    
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->

   
   <string name="main_title">Android Sudoku</string>
   <string name="continue_label">Continue</string>
   <string name="new_game_label">New Game</string>
   <string name="about_label">About</string>
   <string name="exit_label">Exit</string>

   <string name="settings_label">Settings...</string>
   <string name="settings_title">Sudoku settings</string>
   <string name="settings_shortcut">s</string>
   <string name="music_title">Music</string>
   <string name="music_summary">Play background music</string>
   <string name="hints_title">Hints</string>
   <string name="hints_summary">Show hints during play</string>

   <string name="new_game_title">Difficulty</string>
   <string name="easy_label">Easy</string>
   <string name="medium_label">Medium</string>
   <string name="hard_label">Hard</string>

   <string name="game_title">Game</string>
   <string name="no_moves_label">No moves</string>
   <string name="keypad_title">Keypad</string>
   
   <string name="about_title">About Android Sudoku</string>
   <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.
</string>

   <string name="rules_text">
       <b>Game Rules:</b>\n\n 1. The words must use a single letter only once, unless it appears 
       twice.\n\n 2. All words must be connected horizontally, vertically or diagonally.
       \n\n 3. You cannot enter a word more than once.\n\n 4. Scoring: Each 3 and 4 letter 
       word earns you 1 point. For over 4 letters, one additional point for each letter 
       over four.\n  
       </string>
   <string name="ack_text">
       <b>Acknowledgements:</b>\n\n 1. Sound files were contributed from soundjay.com\n\n 
       2. The grid layout for the Boggle Board is based on the Sudoku board in the 
       Sudoku code from text. \n\n
       3. Thanks to Professor Intelli and TAs Elica and Matt.
       </string>
</resources>
