<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:gravity="center"
   android:padding="30dip"
   android:background="@color/boggle_background"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:text="@string/boggle_title"
        android:textSize="25sp" />
   
   <Button
      android:id="@+id/playgame_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/playgame_label" />
   
   <Button
      android:id="@+id/rules_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/rules_label" />
   
   <Button
      android:id="@+id/acknowledgements_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/acknowledgements_label" />
   
   <Button
      android:id="@+id/bogglequit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/bogglequit_label" />
</LinearLayout>