<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/bogglegame_linearlayout"
   android:orientation="vertical"   
   android:layout_width="fill_parent" 
   android:layout_height="fill_parent" 
   android:gravity="center"
   android:padding="20dip"
   android:background="@color/boggle_background"
   >

   <RelativeLayout android:id="@+id/bogglegame_relativelayout"
       android:layout_width="fill_parent" 
   	   android:layout_height="wrap_content" > 
      
   <TextView android:id="@+id/score_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="16dip"
       android:paddingRight="30dip"
       android:paddingBottom="30dip"
       />
   
   <TextView android:id="@+id/timer_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="16dip"       
       android:paddingBottom="30dip"
       android:layout_toRightOf="@id/score_text"
       />
<TableLayout
      android:id="@+id/pause_continue_table"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:stretchColumns="*"
      android:layout_below="@id/score_text">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         >
  
   <Button
      android:id="@+id/pause_button"
      android:text="@string/pause_label"    
      />
  
   <Button
      android:id="@+id/resume_button"     
      android:text="@string/resume_label"
      android:visibility="invisible" 
   />
   </TableRow>
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         >
  <Button
      android:id="@+id/submit_button"
       android:layout_width="fill_parent" 
   	   android:layout_height="wrap_content"
      android:text="@string/submit_label"
      
    />
  
   <TextView
      android:id="@+id/word_text"           
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="16dip" 
	   android:paddingLeft="20dip"
   />
   </TableRow>
   </TableLayout>
   
	
   </RelativeLayout>
</LinearLayout>